Upgrade versions and cleanup code for Java 19